deploy/application-platform/observer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vela-access
  labels:
    app.kubernetes.io/part-of: vela
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
